# repo-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  demo.md  docker-compose.yml  pyproject.toml  ruff.toml
src/dashboard/: app.py  auth.py  config.py  dependencies.py  models.py
src/dashboard/clients/: fly.py  github.py
src/dashboard/routes/: api.py  content.py  dashboard.py
src/dashboard/services/: aggregator.py
src/dashboard/static/: auth.js  dashboard.js  style.css
src/dashboard/templates/: base.html  dashboard.html
src/dashboard/templates/partials/: dashboard_content.html  repo_card.html
tests/: test_aggregator.py  test_auth.py  test_config.py  test_fly_client.py  test_github_client.py  test_models.py  test_routes_api.py  test_routes_dashboard.py
